// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogBox component background at small screen size should render properly when it is closed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67,84,101,0.65);
  z-index: 1000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`DialogBox component background at small screen size should render properly when it is open 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67,84,101,0.65);
  z-index: 1000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
    open=""
  />
</div>
`;

exports[`DialogBox component should render properly when it is open 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 10;
  padding: 2.4rem 1.6rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 > * + * {
  margin: 1.6rem 0 0;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  padding: 0 1.6rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(67,84,101,0.65);
  z-index: 1000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2::-webkit-scrollbar {
  width: 0.5rem;
}

.c2::-webkit-scrollbar-track {
  background-color: transparent;
  margin-top: 0rem;
}

.c2::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: #b0bcc8;
}

.c3 {
  box-sizing: border-box;
  background-color: #ffffff;
  width: 100%;
  border-top-left-radius: 1.6rem;
  border-top-right-radius: 1.6rem;
  z-index: 10;
  color: #13181D;
  position: relative;
  padding: 2.1rem 1.6rem 1.9rem 1.6rem;
}

.c1 {
  background: #ffffff;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67,84,101,0.5);
  box-sizing: border-box;
  border-radius: 1.6rem;
  overflow-y: scroll;
  max-height: 80%;
  width: calc(100% - 2.4rem);
}

@media (min-width:768px) {

}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding: 2.4rem 1.6rem 0;
  }

  .c5 > * + * {
    margin: 0 0 0 1.6rem;
  }
}

@media (max-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    overflow: auto;
  }

  .c4::-webkit-scrollbar {
    width: 0.5rem;
  }

  .c4::-webkit-scrollbar-track {
    background-color: transparent;
  }

  .c4::-webkit-scrollbar-thumb {
    border-radius: 1rem;
    background-color: #b0bcc8;
  }
}

@media (min-width:768px) {
  .c2 {
    overflow: hidden;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c2::-webkit-scrollbar-track {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    position: relative;
    padding: 0 1.6rem 1.6rem;
  }
}

@media (min-width:768px) {

}

@media (min-width:768px) and (max-width:1439px) {
  .c1 {
    max-width: 72%;
    min-width: 200px;
    padding: 4.8rem 3.2rem;
  }
}

@media (min-width:1440px) {
  .c1 {
    padding: 4.8rem 3.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

<div>
  <div
    class="c0"
    id="medly-dialog-box"
    open=""
  >
    <div
      class="c1"
      id="medly-dialog-box-popup"
      open=""
    >
      <div
        class="c2"
        id="medly-dialog-box-inner-container"
      >
        <div
          class="c3"
          id="medly-dialog-box-header"
        >
          <p>
            Demo Header
          </p>
        </div>
        <div
          class="c4"
          id="medly-dialog-box-content"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
        </div>
        <div
          class="c5"
          id="medly-dialog-box-actions"
        >
          Demo Actions
        </div>
      </div>
    </div>
  </div>
</div>
`;
